--- a/public/styles.css
+++ b/public/styles.css
@@ -1,13 +1,3 @@
-.jumbotron-fluid {
-    /* background-image: url(https://image.freepik.com/free-vector/abstract-summer-sunny-day-clouds-weather-background_38782-1207.jpg); */
-    /* background-repeat: no-repeat; */
-    background-size: cover;
-    border-style: solid;
-}
-
-body {
-    background-color: honeydew;
-}
 
 .location-title {
     text-align: center;
@@ -16,4 +6,7 @@ body {
 
 h1 {
     text-align: center;
+}
+body {
+    background-color: Black;
 }
