--- a/views/layout.erb
+++ b/views/layout.erb
@@ -21,7 +21,7 @@
     <title>He@tM@P</title>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="/">
-            <span style="font-size: 32px; color: black;">
+            <span style="font-size: 32px; color: red;">
                 <i class="fas fa-bolt"></i>
             </span>
         </a>
