--- a/public/styles.css
+++ b/public/styles.css
@@ -4,8 +4,10 @@
     color: red;
 }
 
-h1 {
+h2 {
     text-align: center;
+    color: red;
+    font-size: 32px;
 }
 body {
     background-color: Black;
