--- a/views/city_search.erb
+++ b/views/city_search.erb
@@ -1,6 +1,23 @@
 <h2>Welcome to <%= @location %> !</h2>
+    <div class="container mt-5">
+      <h1>Where 2?</h1>
+      <iframe
+        width="600"
+        height="450"
+        frameborder="0" style="border:0"
+        src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCtovsQvkIUWlNqtYwXY87gEd4ZSmJEhMw
+          &q=<%= @lat_long %>&zoom=6" allowfullscreen>
+      </iframe>
+      <p>
+        <a href="/" class="btn btn-primary">Go again!</a>
+      </p>
+    </div>
+<% if @search %>
+    Search Saved!
+<% else %>
+    <form action="/search/save" method="post">
+        <input type="hidden" name="location" value="<%= @location %>"">
+        <button type="submit" class="btn btn-link">Save Search!</button>
+    </form>
+<% end %>
 
-
-<form action="/search/save" method="post">
-    <button type="submit" name="search_save" value="test" class="btn btn-link">Save Search!</button>
-</form>
