--- a/views/new_login.erb
+++ b/views/new_login.erb
@@ -9,5 +9,5 @@
     <label>Password</label>
     <input type="password" class="form-control" name="password">
   </div>
-  <button type="submit" class="btn btn-primary">Sign Up</button>
+  <button type="submit" class="btn btn-primary">Sign In</button>
 </form>
