--- a/views/home.erb
+++ b/views/home.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
     <h1 class="display-4">Welcome to He@tM@P</h1>
-    <p class="lead">Enter a city in the top right to see user-submitted reviews and insights!</p>
+    <p class="lead">Enter a city in the top right to see user-submitted events for a city!</p>
   </div>
 </div>
