--- a/views/city_search.erb
+++ b/views/city_search.erb
@@ -1,23 +1,53 @@
-<h2>Welcome to <%= @location %> !</h2>
-    <div class="container mt-5">
-      <h1>Where 2?</h1>
-      <iframe
-        width="600"
-        height="450"
-        frameborder="0" style="border:0"
-        src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCtovsQvkIUWlNqtYwXY87gEd4ZSmJEhMw
-          &q=<%= @lat_long %>&zoom=6" allowfullscreen>
-      </iframe>
-      <p>
-        <a href="/" class="btn btn-primary">Go again!</a>
-      </p>
-    </div>
-<% if @search %>
-    Search Saved!
-<% else %>
-    <form action="/search/save" method="post">
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">Welcome to <%= @location %>!</h1>
+    <% if @search %>
+        Search Saved!
+    <% else %>
+      <% if @current_user %>
+        <form action="/search/save" method="post">
         <input type="hidden" name="location" value="<%= @location %>"">
         <button type="submit" class="btn btn-link">Save Search!</button>
-    </form>
-<% end %>
-
+        </form>
+       <% end %> 
+    <% end %>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col"></div>
+    <div class="col">                
+        <iframe
+            width="450"
+            height="300"
+            frameborder="0" style="border:0"
+            src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCtovsQvkIUWlNqtYwXY87gEd4ZSmJEhMw
+            &q=<%= @lat_long %>&zoom=12" allowfullscreen>
+        </iframe>
+    </div>
+    <div class="col"></div>
+    <div class="w-100"></div>
+    <div class="col">
+ <table class="table">
+  <thead>
+    <tr>
+      <th scope="col">Event Name</th>
+      <th scope="col">Date</th>
+      <th scope="col">User</th>
+      <th scope="col">Description</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% for event in @events %>
+        <tr>
+            <td><%= event[:title] %></td>
+            <td><%= event[:date] %></td>
+            <td><%= event[:user_name] %></td>
+            <td><%= event[:description] %></td>
+        </tr>
+    <% end %>
+  </tbody>
+</table>
+    </div>
+  </div>
+</div>
