--- a/views/search_saved.erb
+++ b/views/search_saved.erb
@@ -1,7 +1,7 @@
+<h1 style="text-align: center;">Saved Searches</h1>
 <table class="table">
   <thead>
     <tr>
-      <th scope="col">ID</th>
       <th scope="col">Location</th>
       <th scope="col">Time</th>
     </tr>
@@ -9,7 +9,6 @@
   <tbody>
     <% for searches in @search %>
         <tr>
-        <th scope="row"><%= searches[:id] %></th>
         <td><%= searches[:location] %></td>
         <td><%= searches[:time] %></td>
         </tr>
