--- a/views/error.erb
+++ b/views/error.erb
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="col text-center">
-    <img src="https://1.bp.blogspot.com/-bmYBfhrvmCI/WpU3dODATpI/AAAAAAAACJU/tyS-NheNR6Y2gvW_KY8xPhKqhO2gjKacgCLcBGAs/s640/Yoda.gif">
+    <img src="http://images.clipartpanda.com/stop-sign-clipart-119498958977780800stop_sign_right_font_mig_.svg.med.png">
 
-    <h1 class='mt-5'>Whoops.  Something went wrong.</h1>
+    <h1 class='mt-5'>There is a user already registered with that email. Please try again with a different email.</h1>
     <p><a href="/" class="btn btn-primary">Go Home</a></p>
   </div>
 </div>
