--- a/views/create_review_error.erb
+++ b/views/create_review_error.erb
@@ -2,7 +2,7 @@
   <div class="col text-center">
     <img src="http://images.clipartpanda.com/stop-sign-clipart-119498958977780800stop_sign_right_font_mig_.svg.med.png">
 
-    <h1 class='mt-5'>Uh Oh. Something went wrong.</h1>
+    <h1 class='mt-5'>You already submitted a review! Don't cheat!</h1>
     <p><a href="/" class="btn btn-primary">Go Home</a></p>
   </div>
 </div>
