--- a/views/layout.erb
+++ b/views/layout.erb
@@ -55,7 +55,7 @@
                     </li>
                 <% end %>
             </ul>
-            <form class="form-inline my-2 my-lg-0" action = "/search/city">
+            <form class="form-inline my-2 my-lg-0" action = "/search/city/input">
             <input class="form-control mr-sm-2" type="text" name="p" placeholder="Enter City Here" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
